--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.4.7",
     "node-schedule": "^1.3.1",
+    "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "telegraf": "^3.26.0"
   },
@@ -18,7 +19,7 @@
   "repository": {
     "type": "git"
   },
-  "keywords": [ ],
+  "keywords": [],
   "author": "Samuele Rodi",
   "license": "MIT"
 }
